--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
 
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Vollkorn+SC:400,600" rel="stylesheet">
 
   </head>
