--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <body>
     <div class=nav>
-      <img src="Unknown.svg"
+      <img src="Unknown.svg">
       <ul>
         <li><a href="wiki.html">HOME</a></li>
         <li><a href="#wiki"> WIKI</a></li>
