changed to index

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class=nav>
       <img src="Unknown.svg">
       <ul>
-        <li><a href="wiki.html">HOME</a></li>
+        <li><a href="index.html">HOME</a></li>
         <li><a href="#wiki"> WIKI</a></li>
         <li><a href= "https://github.com/">GITHUB</a></li>
         <li><a href="https://www.linkedin.com">LINKEDIN</a></li>
